--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ const headerType:{title:string, url:string}[] = [
         {headerType.map((item) => (
             <a
                 href={item.url}
-                class="text-xl text-azure-400 hover:text-azure-300 hover:text-2xl transition duration-100 px-3 py-2 rounded-md font-medium"
+                class="text-shadow-lg/20 text-shadow-azure-500 text-xl text-azure-400 hover:text-azure-300 hover:text-2xl transition duration-100 px-3 py-2 rounded-md font-medium"
             >
                 {item.title}
             </a>
