--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 
 import Layout from '../layouts/Layout.astro';
 import ProjectSection from '../components/ProjectSection.astro';
-import SkillsComponent from '../components/SkillsComponent.astro';
+import SkillsSection from '../components/SkillsSection.astro';
 ---
 
 <Layout>
-	<ProjectSection>
-	<SkillsComponent>
+	<ProjectSection />
+	<SkillsSection />
 </Layout>
