--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -1,8 +1,9 @@
 ---
-import SkillsComponent from "../components/SkillsComponent.astro";
+import SkillsComponent from "../components/SkillsSection.astro";
+import SkillsSection from "../components/SkillsSection.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <SkillsComponent>
+    <SkillsSection>
 </Layout>
