--- a/src/components/ProjectSection.astro
+++ b/src/components/ProjectSection.astro
@@ -1,10 +1,11 @@
 ---
 import {projects} from "../data/projects";
 import ProjectComponent from "../components/ProjectComponent.astro";
+import Subtitle from "./Subtitle.astro";
 ---
 
     <section>
-    <h2 class="text-midnight-100 text-4xl mb-2">Projects</h2>
+    <Subtitle text="Projects"/>
     <div class="grid grid-cols-3 gap-4  p-2">
         {projects.map((item) => (
             <ProjectComponent 
