--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,10 @@ import Header from "../components/Header.astro";
       rel="stylesheet"
     />
   </head>
-  <body class="bg-midnight-950 text-azure-500 font-poppins">
+  <body class="bg-gradient-to-b from-slate-950 via-blue-950 to-slate-900 text-azure-500 font-poppins"></body>
     <Header/>
     
-    <main class="p-10 bg-midnight-950">
+    <main class="p-10">
       <slot />
     </main>
   </body>
