--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ import Header from "../components/Header.astro";
   <body class="bg-gradient-to-b from-slate-950 via-blue-950 to-slate-900 text-azure-500 font-poppins"></body>
     <Header/>
     
-    <main class="p-10">
+    <main class="p-10 pt-20">
       <slot />
     </main>
   </body>
