--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 
 import Layout from '../layouts/Layout.astro';
+import AboutSection from '../components/AboutSection.astro';
 import ProjectSection from '../components/ProjectSection.astro';
 import SkillsSection from '../components/SkillsSection.astro';
 ---
 
 <Layout>
+	<AboutSection />
 	<ProjectSection />
 	<SkillsSection />
 </Layout>
