Refactor project structure and components; update imports accordingly; add tech skills to projects data; projects skills added

--- a/src/components/header/BarNav.astro
+++ b/src/components/header/BarNav.astro
@@ -1,5 +1,5 @@
 ---
-import type { HeaderProps } from "../types/types.ts";
+import type { HeaderProps } from "../../types/types.ts";
 const {headerType} = Astro.props as {headerType:HeaderProps};
 ---
 <!-- Desktop Navigation -->
