--- a/src/components/skills/SkillsSection.astro
+++ b/src/components/skills/SkillsSection.astro
@@ -1,7 +1,7 @@
 ---
-import {SkillsCategories} from "../data/skills";
+import {SkillsCategories} from "../../data/Skills";
 import SkillsCategory from "./SkillsCategory.astro";
-import Subtitle from "./Subtitle.astro";
+import Subtitle from "../Subtitle.astro";
 ---
 
 <section>
