--- a/src/components/about/AboutSection.astro
+++ b/src/components/about/AboutSection.astro
@@ -1,8 +1,8 @@
 ---
-import PersonalPhoto from "../assets/Photo.jpeg";
+import PersonalPhoto from "../../assets/Photo.jpeg";
 import CVButton from "./CVButton.astro";
-import Github from "../assets/github.svg";
-import LinkedIn from "../assets/linkedin.svg";
+import Github from "../../assets/github.svg";
+import LinkedIn from "../../assets/linkedin.svg";
 
 
 const CVEnglish="CV_Julian_Almario.pdf"
