feat: update dependencies and improve component structure
- Added React and related type definitions to package.json.
- Updated Subtitle component to change heading size.
- Adjusted padding in AboutSection component for better layout.
- Enhanced CVButton component with smoother transition duration.
- Modified BarNav and HeaderSideBar components to include icons alongside titles.
- Updated ProjectButton component to conditionally render based on link availability.
- Integrated ClientRouter in Layout for improved navigation.
- Updated types to include icon property for header items.
- Configured TypeScript to support React JSX syntax.

--- a/src/components/about/AboutSection.astro
+++ b/src/components/about/AboutSection.astro
@@ -8,7 +8,7 @@ import LinkedIn from "../../assets/linkedin.svg";
 const CVEnglish="CV_Julian_Almario.pdf"
 ---
 
-<section class="flex max-sm:flex-wrap-reverse max-sm:gap-5 justify-between p-5 lg:p-20">
+<section class="flex max-sm:flex-wrap-reverse max-sm:gap-5 justify-between p-5 lg:py-20">
   <section class="flex flex-col">
     <h3 class="text-azure-600 font-bold">Hi I'm Julian Almario</h3>
     <h1 class="text-4xl text-midnight-100 font-bold mb-5">
