--- a/src/components/header/BarNav.astro
+++ b/src/components/header/BarNav.astro
@@ -4,12 +4,13 @@ const {headerType} = Astro.props as {headerType:HeaderProps};
 ---
 <!-- Desktop Navigation -->
     <nav class="hidden lg:flex justify-center gap-4">
-        {headerType.map((item) => (
+        {headerType.map((Item) => (
             <a
-                href={item.url}
+                href={Item.url}
                 class="text-shadow-lg/20 text-shadow-azure-500 text-xl text-azure-400 hover:text-azure-300 hover:text-2xl transition duration-100 px-3 py-2 rounded-md font-medium"
             >
-                {item.title}
+               <div class="flex gap-1">
+                <Item.icon /> <span>{Item.title}</span></div>
             </a>
         ))}
     </nav>
