--- a/src/components/header/HeaderSideBar.astro
+++ b/src/components/header/HeaderSideBar.astro
@@ -56,7 +56,8 @@ const {headerType} = Astro.props as {headerType:HeaderProps};
                         href={item.url}
                         class="text-shadow-lg/20 text-shadow-azure-500 text-xl text-azure-400 hover:text-azure-300 transition duration-100 px-3 py-2 rounded-md font-medium block"
                     >
-                        {item.title}
+                       <div class="flex gap-1 justify-center items-center py-2 bg-midnight-900 border-b-2 border-azure-500">
+                <item.icon /> <span>{item.title}</span></div>
                     </a>
                 ))}
             </div>
