--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import Header from "../components/header/Header.astro";
+import { ClientRouter } from "astro:transitions";
 
 ---
 
@@ -10,6 +11,7 @@ import Header from "../components/header/Header.astro";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Julian Almario Portfolio</title>
+    <ClientRouter />
     <meta name="generator" content={Astro.generator} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
